--- a/Polynomials/Polynomials/Polynomials.vcxproj.filters
+++ b/Polynomials/Polynomials/Polynomials.vcxproj.filters
@@ -18,5 +18,8 @@
     <ClInclude Include="Monom.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Polynomial.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
