trying to split h/cpp/ Failed

--- a/Polynomials/Polynomials/Polynomials.vcxproj.filters
+++ b/Polynomials/Polynomials/Polynomials.vcxproj.filters
@@ -22,4 +22,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="Monom.cpp">
+      <Filter>Resource Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Polynomial.cpp">
+      <Filter>Resource Files</Filter>
+    </ClCompile>
+  </ItemGroup>
 </Project>
