--- a/Polynomials/Polynomials/Polynomials.vcxproj
+++ b/Polynomials/Polynomials/Polynomials.vcxproj
@@ -149,6 +149,10 @@
     <ClInclude Include="Monom.h" />
     <ClInclude Include="Polynomial.h" />
   </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="Monom.cpp" />
+    <ClCompile Include="Polynomial.cpp" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
