--- a/Polynomials/tests/tests.vcxproj
+++ b/Polynomials/tests/tests.vcxproj
@@ -153,6 +153,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="test_main.cpp" />
+    <ClCompile Include="test_monom.cpp" />
     <ClCompile Include="test_polynomial.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
