--- a/Polynomials/tests/tests.vcxproj.filters
+++ b/Polynomials/tests/tests.vcxproj.filters
@@ -21,5 +21,8 @@
     <ClCompile Include="test_polynomial.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="test_monom.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
